# navfn_openmp

./: CMakeLists.txt  Makefile.orig  bgp_plugin.xml  manifest.xml  navtest  package.xml
include/navfn_openmp/: navfn.h  navfn_ros.h  navwin.h  potarr_point.h
src/: navfn.cpp  navfn_node.cpp  navfn_omp.cpp  navfn_ros.cpp  navtest.cpp  navwin.cpp  read_pgm_costmap.cpp
src/navfn_openmp/srv/: _MakeNavPlan.py  _SetCostmap.py
srv_gen/cpp/include/navfn_openmp/: MakeNavPlan.h  SetCostmap.h
srv_gen/lisp/: MakeNavPlan.lisp  SetCostmap.lisp  _package.lisp  _package_MakeNavPlan.lisp  _package_SetCostmap.lisp  navfn_openmp-srv.asd
test/: CMakeLists.txt  path_calc_test.cpp
