<package>
    <name>navfn_openmp</name>
    <version>1.10.3</version>
    <description>

        navfn with openMP<a href="http://ros.org/wiki/nav_core">nav_core</a>.

    </description>
    <author>Kurt Konolige, Eitan Marder-Eppstein, KY Lam</author>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>
    <url>http://ros.org/wiki/navfn</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rosconsole</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>

    <run_depend>rosconsole</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>

    <export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export>
</package>
